对期货数据提取 prompt添加盘前不采集期货数据

--- a/期货数据提取/期货图片数据提取.md
+++ b/期货数据提取/期货图片数据提取.md
@@ -3,6 +3,7 @@
 <!-- 
 vscode 使用：shift+alt+v 将 excle 表格复制为 markdown 格式
 从手机截图中提取图片数据,似乎豆包的图片识别更厉害.
+#20250317 目前使用 DeepSeek
 
 -->
 
@@ -42,11 +43,18 @@ vscode 使用：shift+alt+v 将 excle 表格复制为 markdown 格式
     - 1.4 图片中合约名称由【纽约金】或【纽约银】开头的品种，类别是【外盘期货】
     - 1.5 图片中合约名称由【伦敦金】或【伦敦银】开头的品种，类别是【外盘现货】
 
-3. 数据提取及清洗规则，按照【名称】处理。
+
+3. 【时间】处理规则：完整时间由日期和时点组成，从图片最顶端识别时点，例如“23:50”，按照以下规则进一步处理：
+   - 不要考虑模板中时间，只考虑使用图片中识别的时间和文件名识别的时间。
+   - 当图片文件名包含日期和时点时，使用图片文件名的时间，同时检查文件名时间的时点与图片识别的时点是否一致，不一致则给用户提示。
+   - 当图片文件名不包含完整时间时，使用图片中的时点，日期使用今天的日期。
+   - 最终时间格式不需要包含到秒，只需要包含到分。
+
+4. 数据提取及清洗规则，按照【名称】处理。
     -  添加到最终的表格中的数据：
         - 【外汇】
         - 【内盘TD合约】
-        - 【内盘期货】
+        - 【内盘期货】：当时间是北京时间晚上20:00到21:00之间时，不添加到最终的表格中。
         - 【外盘期货】
         - 【外盘现货】
     - 不要添加到最终的表格中的数据：
@@ -57,11 +65,7 @@ vscode 使用：shift+alt+v 将 excle 表格复制为 markdown 格式
         - 图片中不存在的名称，模板名称中存在，不要添加到最终的表格中。
 
 
-3. 【时间】处理规则：完整时间由日期和时点组成，从图片最顶端识别时点，例如“23:50”，按照以下规则进一步处理：
-   - 不要考虑模板中时间，只考虑使用图片中识别的时间和文件名识别的时间。
-   - 当图片文件名包含日期和时点时，使用图片文件名的时间，同时检查文件名时间的时点与图片识别的时点是否一致，不一致则给用户提示。
-   - 当图片文件名不包含完整时间时，使用图片中的时点，日期使用今天的日期。
-   - 最终时间格式不需要包含到秒，只需要包含到分。
+
 
 
 
